src/objects/AppUser__c.object
<CustomObject>
    <fields>
        <fullName>EULA_Acceptance_Date__c</fullName>
        <label>EULA Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EULA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EULA Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <summarizedField>AppClient__c.Last_Login__c</summarizedField>
        <summaryForeignKey>AppClient__c.AppUser__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrganizationID__c</fullName>
        <externalId>true</externalId>
        <label>Organization ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <externalId>true</externalId>
        <label>User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>App User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Username__c</columns>
        <columns>EULA__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>App User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>